--- a/Ellevo.mobile.app/Ellevo.mobile.app.iOS/packages.config
+++ b/Ellevo.mobile.app/Ellevo.mobile.app.iOS/packages.config
@@ -3,6 +3,6 @@
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="xamarinios10" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="xamarinios10" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="xamarinios10" />
-  <package id="Xamarin.Forms" version="2.3.3.180" targetFramework="xamarinios10" />
+  <package id="Xamarin.Forms" version="2.3.4.192-pre2" targetFramework="xamarinios10" />
   <package id="Xamarin.TestCloud.Agent" version="0.20.3" targetFramework="xamarinios10" />
 </packages>
