--- a/Ellevo.mobile.app/Ellevo.mobile.app.iOS/Info.plist
+++ b/Ellevo.mobile.app/Ellevo.mobile.app.iOS/Info.plist
@@ -23,9 +23,9 @@
 	<key>MinimumOSVersion</key>
 	<string>6.0</string>
 	<key>CFBundleDisplayName</key>
-	<string>Ellevo.mobile.app</string>
+	<string>Ellevo Mobile</string>
 	<key>CFBundleIdentifier</key>
-	<string>br.com.ellevo.mobile</string>
+	<string>Ellevo Mobile</string>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
 	<key>CFBundleIconFiles</key>
