--- a/Ellevo.mobile.app/Ellevo.mobile.app.iOS/Info.plist
+++ b/Ellevo.mobile.app/Ellevo.mobile.app.iOS/Info.plist
@@ -42,6 +42,7 @@
 		<string>Icon-Small-40@2x.png</string>
 		<string>Icon-Small.png</string>
 		<string>Icon-Small@2x.png</string>
+		<string>Icon-83.5@2x.png</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
