--- a/Ellevo.mobile.app/Ellevo.mobile.app.iOS/Info.plist
+++ b/Ellevo.mobile.app/Ellevo.mobile.app.iOS/Info.plist
@@ -27,7 +27,7 @@
 	<key>CFBundleIdentifier</key>
 	<string>br.com.ellevo.mobile</string>
 	<key>CFBundleVersion</key>
-	<string>1.0.2</string>
+	<string>1.0.7</string>
 	<key>CFBundleIconFiles</key>
 	<array>
 		<string>Icon-60@2x.png</string>
@@ -54,5 +54,7 @@
 	<string>LaunchScreen</string>
 	<key>UIPrerenderedIcon</key>
 	<true/>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
 </dict>
 </plist>
